All argv types should be char * const * not const char **
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5599 42af7a65-404d-4744-a932-0658087f49c3

--- a/NxWidgets/ChangeLog.txt
+++ b/NxWidgets/ChangeLog.txt
@@ -268,3 +268,6 @@
   panel.
 
 1.6 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>
+
+* Type of argv[] has changed from const char ** to char * const *
+
