Changed needed to fix issues with task_restart()
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5615 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/ChangeLog.txt
+++ b/apps/ChangeLog.txt
@@ -515,4 +515,5 @@
 	  creating a pthread.
 	* apps/examples and nshlib:  Change name of _TCB to struct tcb_s to
 	  match NuttX name change.
-
+	* apps/examples/ostest/restart.c:  Add a test case to verify
+	  task_restart().
