Fix a readline bug.  If a NUL is received, it would return end-of-file
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5633 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/ChangeLog.txt
+++ b/apps/ChangeLog.txt
@@ -517,3 +517,8 @@
 	  match NuttX name change.
 	* apps/examples/ostest/restart.c:  Add a test case to verify
 	  task_restart().
+	* apps/system/readline.c:  readline() now returns EOF on any failure
+	  (instead of a negated errno value).  This is because the underlying
+	  read is based on logic similar to getc.  The value zero was being
+	  confused with a NUL.  So if a NUL was received, the NSH session
+	  would terminate because it thought it was the end of file.
