STM32 F4 patches from Petteri Aimonen (mostly USB)
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5652 42af7a65-404d-4744-a932-0658087f49c3

--- a/NxWidgets/ChangeLog.txt
+++ b/NxWidgets/ChangeLog.txt
@@ -278,4 +278,6 @@
   action event.  From Petteri Aimonen.
 * NxWidgets/tools/bitmap_converter.py: Fix bitmap_converter.py so that
   it works with indexed input images.
+* NxWidgets::CLabel: Fix backward conditional compilation in the
+  "flicker free" logic.
 
