Buildroot now builds armv6-m toolchain; NuTiny configuration now uses buildroot toolchain
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5665 42af7a65-404d-4744-a932-0658087f49c3

--- a/misc/buildroot/ChangeLog
+++ b/misc/buildroot/ChangeLog
@@ -131,3 +131,5 @@ buildroot-1.12 2011-xx-xx <gnutt@nuttx.org>
 
 	* Fix typo toolchain/gdb/Config.in that prevented GDB 7.4 from building
 	  (from Ken Bannister).
+	* Add support for a Cortex-M0 toolchain based on GCC 4.6.3.
+
