Add apps/system/ramtest.  I will use this for the LPC1788 SDRAM bringup
git-svn-id: svn://svn.code.sf.net/p/nuttx/code/trunk@5791 42af7a65-404d-4744-a932-0658087f49c3

--- a/apps/ChangeLog.txt
+++ b/apps/ChangeLog.txt
@@ -524,3 +524,5 @@
 	  would terminate because it thought it was the end of file.
 
 6.27 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>
+
+	* apps/system/ramtest:  Add a simple memory test (2013-03-26).
